--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="text_filename">File name</string>
     <string name="text_status">Status</string>
     <string name="text_path">Folder</string>
+    <string name="status_icon_desc">An icon representing download status</string>
 </resources>
